--- a/front/src/App.css
+++ b/front/src/App.css
@@ -95,6 +95,7 @@
   height: 50px;
   border: none;
   background-color: dimgrey;
+  color: white;
   border-radius: 7px;
   padding-left: 10px;
   margin-right: 50px;
