--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,8 +1,9 @@
 :root {
-  --highlight-gold: #8D721E;
-  --accent-primary:  	#7B3F00;
-  --accent-secondary: #E5E5E5;
-  --accent-tertiary: #D8D8D8;
+  --highlight-gold: #9b9b9b;
+  --accent-primary:  	HSLA(25, 30.0%, 39.0%);
+  --accent-secondary: #FFFFFF;
+  --accent-tertiary: #F4F1E8;
+  --icon-colour: #F4F1E8;
   --background-color: #FFFFFF;
 }
 
@@ -19,6 +20,7 @@
 .title{
   background-color: var(--highlight-gold);
   padding: 6px 0px;
+  height: 4%
 }
 
 .appName {
@@ -43,14 +45,15 @@
 .mainContent {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   height: 100%;
   width: 100%;
+  padding: 0;
 }
 
 .main {
-  height: 100%;
-  width: 85%;
+  height: 93%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -59,7 +62,7 @@
 .sidebar {
   background-color: var(--accent-primary);
   height: 100%;
-  width: 15%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -85,12 +88,17 @@
 .message-icon-container {
   width: 50px;
   height: 50px;
-  border-radius: 25px;
+  /* border-radius: 25px; */
   margin: 10px 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--accent-tertiary);
+  /* background-color: var(--icon-colour); */
+}
+
+.avatar {
+  background-color: var(--icon-colour);
+  color: var(--accent-primary)
 }
 
 .message-icon {
@@ -161,7 +169,9 @@
 .session-icon {
   margin-left: 10px;
   width: 70px;
-  height: 30px;
+  height: 20px;
+  font-size : 20px;
+  transform: scale(1.3);
   color: var(--accent-secondary);
 }
 
@@ -196,15 +206,25 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-top: 10px;
-  margin-left: 15px;
-  margin-right: 15px;
+  padding-top: 30px;
   margin-bottom: 10px;
-  border-top: 1px solid black;
+  /* border-top: 1px solid black; */
   color: var(--accent-primary);
   font-weight: bold;
 }
 
+
+.bottom {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.expedite {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
 
 .userIcon {
   width: 50px;
